--- a/yueting/src/main/res/layout/activity_picture.xml
+++ b/yueting/src/main/res/layout/activity_picture.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:yueting="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_impage"
@@ -10,20 +9,13 @@
         android:layout_height="match_parent"
         android:overScrollMode="never"
         android:visibility="gone"/>
-    <!--<com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/sdv_picture"
-        android:layout_above="@+id/bt_post"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        fresco:actualImageScaleType="fitXY"
-        fresco:placeholderImageScaleType="fitXY"
-        />-->
+
     <ListView
         android:id="@+id/lv_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bt_post"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <ExpandableListView
         android:id="@+id/elv_test"
@@ -35,10 +27,10 @@
 
     <TextView
         android:id="@+id/tv_file_name"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bt_post" />
+        android:layout_above="@+id/bt_post"
+        android:scrollbars="vertical"/>
 
     <Button
         android:id="@+id/bt_post"
@@ -59,16 +51,6 @@
         android:gravity="center"
         android:onClick="onClick"
         android:text="ripple"/>
-
-    <com.aqrairsigns.aqrleilib.view.RoundBar
-        android:id="@+id/rb_test_ratio"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        yueting:openAnimation="true"
-        yueting:useGradientGolor="true"
-        yueting:animationVelocity="3"
-        yueting:capStyle="round"
-        android:visibility="gone" />
 
     <com.aqrairsigns.aqrleilib.view.FlowLayout
         android:id="@+id/aqr_tv_test"
