--- a/yueting/src/main/res/layout/activity_picture.xml
+++ b/yueting/src/main/res/layout/activity_picture.xml
@@ -25,6 +25,11 @@
         android:groupIndicator="@null"
         android:visibility="gone"/>
 
+    <WebView
+        android:id="@+id/wv_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/tv_file_name"
         android:layout_width="match_parent"
@@ -38,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
+        android:background="@drawable/button_ripple_back"
         android:onClick="onClick"
         android:text="post"
         android:visibility="visible"/>
@@ -50,7 +56,8 @@
         android:background="#60000000"
         android:gravity="center"
         android:onClick="onClick"
-        android:text="ripple"/>
+        android:text="ripple"
+        android:visibility="gone"/>
 
     <com.aqrairsigns.aqrleilib.view.FlowLayout
         android:id="@+id/aqr_tv_test"
